# rtcamp10_setup

./: .gitmodules  AWS101.md  CMakeLists.txt  exec_env_spec.md  how_to_create_AMI.md
samples/cpu_renderer/: CMakeLists.txt  main.cpp
scripts/: enable_sshd.ps1  encode_videos.py  run_submissions.py  semiauto_set_up.ps1  userdata.yml
yourname_cpu/: renderer_introduction.pptx  run.ps1
